# relay

./: .env.example  Dockerfile  README.md  architecture.md  docker-compose.yml  pyproject.toml
auth/: __init__.py  database.py  database_oauth.py  db_init.py  oauth_providers.py
backends/: __init__.py  manager.py
config/: __init__.py  settings.py
connectors/: __init__.py  ai_providers.py  github.py  linear.py  slack.py
gateway/: __init__.py  cli.py  server.py
scripts/: run-mcp.sh  start.sh
security/: __init__.py  middleware.py
static/css/: style.css
static/js/: app.js
templates/: access_requests.html  admin.html  api_key_detail.html  api_keys.html  base.html  connector_detail.html  connectors.html  dashboard.html  login.html  register.html  settings.html
templates/components/: sidebar.html
tests/: __init__.py  test_gateway.py
